Finished, including stretch goals but buggy animations

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -4,12 +4,12 @@
 .article {
   margin: 20px 10%;
   padding: 0 20px 25px;
-  border: 100px solid lightgrey;
+  border: 1px solid lightgrey;
   border-radius: 10px;
   background-color: white;
   position: relative;
   height: 50px;
-  overflow: scroll;
+  overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 
   h2 {
@@ -39,10 +39,24 @@
     transform: translate(-50%);
     background-color: white;
   }
+  .closeButton {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    font-size: 12px;
+    color: grey;
+    cursor: pointer;
+    transform: translate(-50%);
+    background-color: white;
+  }
+  .hide-btn {
+    display:none;
+  }
 }
 
 .article-open {
-  height: 600px;
+  height: 100%;
+  transition: all 0.6s;
 }
 
 
