--- a/css/index.css
+++ b/css/index.css
@@ -73,8 +73,22 @@
   transform: translate(-50%);
   background-color: white;
 }
+.article .closeButton {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  font-size: 12px;
+  color: grey;
+  cursor: pointer;
+  transform: translate(-50%);
+  background-color: white;
+}
+.article .hide-btn {
+  display: none;
+}
 .article-open {
-  height: 400px;
+  height: 100%;
+  transition: all 0.6s;
 }
 .menu-button {
   position: absolute;
